# protowire-cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
cmake/: protowireConfig.cmake.in
cmd/bench_pxf/: CMakeLists.txt  main.cc
cmd/bench_sbe/: CMakeLists.txt  main.cc
cmd/check_decode/: CMakeLists.txt  main.cc
cmd/dump_envelope/: CMakeLists.txt  main.cc
cmd/protowire/: CMakeLists.txt  main.cc
include/protowire/: envelope.h  pb.h  pb_big.h  pxf.h  sbe.h
include/protowire/detail/: base64.h  checked_arith.h  duration.h  errors.h  rfc3339.h  status.h  utf8.h  wire.h
include/protowire/pxf/: annotations.h  ast.h  dataset_reader.h  format.h  lexer.h  options.h  parser.h  result.h  schema.h  table_reader.h  token.h  wellknown.h
include/protowire/sbe/: annotations.h  template.h
proto/protoregistry/v1/: registry.proto
src/detail/: base64.cc  duration.cc  rfc3339.cc  status.cc
src/envelope/: envelope.cc
src/pb/: big.cc  wire.cc
src/pxf/: annotations.cc  ast.cc  dataset_reader.cc  decode.cc  decode_fast.cc  encode.cc  format.cc  lexer.cc  options.cc  parser.cc  result.cc  schema.cc  table_reader.cc  wellknown.cc
src/sbe/: annotations.cc  codec.cc  marshal.cc  prototoxml.cc  template.cc  unmarshal.cc  view.cc  xmlschema.cc  xmltoproto.cc
test/: CMakeLists.txt  detail_base64_test.cc  detail_duration_test.cc  detail_rfc3339_test.cc  envelope_test.cc  pb_test.cc  protoc_compat.h  pxf_annotations_test.cc  pxf_any_test.cc  pxf_bignum_test.cc  pxf_dataset_reader_test.cc  pxf_decode_test.cc  pxf_directive_test.cc  pxf_escapes_test.cc  pxf_fast_test.cc  pxf_format_test.cc  pxf_full_roundtrip_test.cc  pxf_lexer_test.cc  pxf_null_test.cc  pxf_proto_directive_test.cc  pxf_result_directives_test.cc  pxf_schema_test.cc  pxf_table_reader_test.cc  sbe_codec_test.cc  sbe_navigation_test.cc
testdata/: test.proto
